--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="login_prompt">Login</string>
     <string name="register">Don\'t have an account? Register here</string>
     <string name="play">Play</string>
+    <string name="leaderboard">Leaderboard</string>
     <string name="singleplayer">Solo</string>
     <string name="peertopeer">Duel</string>
     <string name="server">Battle Royale</string>
